plugins {
	id 'fabric-loom' version '1.2-SNAPSHOT'
	id 'io.github.juuxel.loom-quiltflower' version '1.9.+'
	id 'maven-publish'
}

archivesBaseName = project.archives_base_name
version = "$mod_version+build.$build_number-$minecraft_version"
group = maven_group

repositories {
	mavenCentral()
	mavenLocal()
	maven { url = 'https://s01.oss.sonatype.org/content/repositories/snapshots' }
	maven { url = 'https://server.bbkr.space/artifactory/libs-release/' }
	maven { url = 'https://repo.repsy.io/mvn/xxx_inaksis_xxx/inaksis' }
	maven { url = 'https://repo.codemc.org/repository/maven-public' }
	maven { url = 'https://maven.quiltmc.org/repository/release' }
	maven { url = 'https://maven.quiltmc.org/repository/snapshot' }
	maven { url = 'https://maven.minecraftforge.net/' }
	maven { url = 'https://maven.terraformersmc.com/' }
	maven { url = 'https://api.modrinth.com/maven' }
	maven { url = 'https://hephaestus.dev/release' }
	maven { url = 'https://maven.ryanliptak.com/' }
	maven { url = 'https://maven.wispforest.io' }
	maven { url = 'https://maven.shedaniel.me' }
	maven { url = 'https://maven.siphalor.de' }
	maven { url = 'https://mvn.devos.one/releases/' }
	maven { url = 'https://mvn.devos.one/snapshots/' }
	maven { url = 'https://jitpack.io' }
	maven { url = 'https://dl.bintray.com/kotlin/kotlin-dev' }
	maven { url = 'https://raw.githubusercontent.com/kotlin-graphics/mary/master' }
	maven { url = 'https://maven.isxander.dev/releases' }
	maven {
		url "https://maven.saps.dev/minecraft"
		content {
			includeGroup "dev.latvian.mods"
			includeGroup "dev.ftb.mods"
		}
	}
	maven {
		name 'Xander Maven'
		url 'https://maven.isxander.dev/releases'
	}
	maven { url = "https://maven.parchmentmc.net/" }
}

loom {
	accessWidenerPath = file("src/main/resources/obsidian.accesswidener")
}

quiltflower {
	addToRuntimeClasspath.set(true)
	fromLatestQuiltSnapshot()
}

configurations.configureEach {
	resolutionStrategy {
		force("net.fabricmc.fabric-api:fabric-api:0.82.1+1.20")
		force("net.fabricmc:fabric-loader:0.14.21")
	}
}

dependencies {
	def noFapi = { exclude group: 'net.fabricmc.fabric-api' }
	def noFLoader = { exclude group: 'net.fabricmc' }
	def noCottonMC = { exclude group: 'io.github.cottonmc' }
	def noQuiltMC = { exclude group: 'org.quiltmc' }

	minecraft libs.minecraft
	mappings loom.layered {
		it.mappings("org.quiltmc:quilt-mappings:${libs.versions.quilt.mappings.get()}:intermediary-v2")
//		it.mappings("net.fabricmc:yarn:${libs.versions.fabric.mappings.get()}:v2")
		it.parchment("org.parchmentmc.data:parchment-1.19.3:${libs.versions.parchment.get()}@zip")
		it.officialMojangMappings()
	}

	modImplementation libs.fabric.loader

	modImplementation (libs.fabric.api)

	modImplementation (libs.vampirelib) {
		noFapi
		noFLoader
		noCottonMC
		noQuiltMC
	}
	include(libs.vampirelib) {
		noFapi
		noFLoader
		noCottonMC
		noQuiltMC
	}

	modImplementation include("io.github.cottonmc:Jankson-Fabric:5.0.1+j1.2.2")

	/*modImplementation (libs.appleskin) {
		transitive false
		noFapi
		noFLoader
		noCottonMC
		noQuiltMC
	}
	include (libs.appleskin) {
		noFapi
		noFLoader
		noCottonMC
		noQuiltMC
	}*/

	modImplementation (libs.owo.lib) {
		noFapi
		noFLoader
		noCottonMC
		noQuiltMC
	}
	include (libs.owo.sentinel) {
		noFapi
		noFLoader
		noCottonMC
		noQuiltMC
	}

	/*modImplementation ("io.wispforest:condensed_creative-fabric:${libs.versions.cct.get()}") {
		noFapi
		noFLoader
		noCottonMC
		noQuiltMC
	}*/
	modImplementation "dev.isxander.yacl:yet-another-config-lib-fabric:3.0.0-beta.1+1.20"

	implementation group: 'com.amihaiemil.web', name: 'eo-yaml', version: '6.0.1'
	implementation 'com.electronwill.night-config:core:3.6.6'
	implementation 'com.electronwill.night-config:toml:3.6.6'
	implementation 'com.electronwill.night-config:yaml:3.6.6'
	implementation 'com.electronwill.night-config:hocon:3.6.6'

	implementation 'org.snakeyaml:snakeyaml-engine:2.4'
	implementation 'org.hjson:hjson:3.0.0'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.14.0'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-toml:2.14.0'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-guava:2.14.0'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.0'

	modApi("dev.latvian.mods:rhino-fabric:1902.2.2-build.269")
}

processResources {
	inputs.property 'version', version

	filesMatching('fabric.mod.json') {
		expand 'version': version
	}
}

java {
	withSourcesJar()
	withJavadocJar()
	toolchain.languageVersion = JavaLanguageVersion.of(17)
}

tasks.withType(JavaCompile).configureEach {
	it.options.release = 17
	it.options.encoding = 'UTF-8'
}

compileJava {
	options.compilerArgs += '--enable-preview'
}

jar {
	from('LICENSE') {
		rename {
			"${it}_$archivesBaseName"
		}
	}
}

publishing {
	publications {
		mavenJava( MavenPublication ) {
			from components.java
		}
	}
	repositories {}
}
